[project]
name = "flights"
version = "0.0.1"
requires-python = ">= 3.11.9"
authors = [{"name" = "Databricks Field Eng"}]
description = "Simple devx example package"
dependencies = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"flights" = "./src/flights"}

[tool.uv.workspace]
members = ["oss-unity"]
